...
        <item quantity="two">Last %s days</item>
        <item quantity="few">Last %s days</item>
        <item quantity="many">Last %s days</item>
        <item quantity="other">Last %s days</item>
    </plurals>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="time_day">d</string>
    <string name="time_hour">h</string>
    <string name="time_minute">m</string>
    <string name="time_second">s</string>

    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>

    <string name="untracked_time_name">Untracked</string>
    <string name="uncategorized_time_name">Uncategorized</string>
    <string name="multitask_time_name">Multitask</string>
    <string name="record_types_empty">No activities added</string>
    <string name="record_tag_selection_hint">Select record tag</string>
    <string name="time_now">Now</string>
    <string name="cannot_be_in_the_future">Time cannot be in the future</string>
...
    <!--  Change record  -->
    <string name="change_record_message_choose_type">Select activity</string>
    <string name="change_record_type_field">Activity</string>
    <string name="change_record_tag_field">Tag</string>
    <string name="change_record_comment_field">Comment</string>
    <string name="change_record_comment_hint">Enter new comment</string>
    <string name="change_record_actions_hint">Actions</string>
    <string name="change_record_last_comments_hint">Last comments</string>
    <string name="change_record_favourite_comments_hint">Favourite</string>
    <string name="change_record_favourite_comments_hint_long">Favourite comments</string>
    <string name="change_record_favourite_activity_selection">Favourite only for selected activities</string>
    <string name="change_record_similar_comments_hint">Similar comments</string>
    <string name="change_record_categories_empty">No record tags added</string>
...
    <string name="change_record_move_hint">Will change start time without changing duration</string>
    <string name="change_record_merge">Merge</string>
    <string name="change_record_merge_hint">Will add this time to previous record</string>
    <string name="change_record_multiselect">Multiselect</string>
    <string name="change_record_multiselect_hint">Select multiple records and open Actions menu again</string>
    <string name="change_record_adjust">Change</string>
    <string name="change_record_shortcut">Shortcut</string>
    <string name="change_record_shortcut_hint">Will create a shortcut on the main tab with preselected tags and comment for quicker access</string>
    <string name="change_record_change_prev_record">Also change time of previous record</string>
    <string name="change_record_change_adjacent_records">Also change time of adjacent records</string>
    <string name="change_record_change_prev">Previous</string>
    <string name="change_record_change_next">Next</string>
    <string name="change_record_change_overlapped">Overlapped</string>
...
    <string name="change_record_favourite_icons_hint">Favourite icons</string>
    <string name="change_record_type_save">Save</string>
    <string name="change_record_message_choose_name">Choose a name</string>
    <string name="change_record_message_name_exist">Name already used</string>
    <string name="change_record_type_note_hint">Note</string>
    <string name="change_record_type_categories_empty">No categories added</string>
    <string name="change_record_type_goal_time_disabled">Disabled</string>
    <string name="change_record_type_goal_time_hint">Goal</string>
    <string name="change_record_type_limit_time_hint">Limit</string>
    <string name="change_record_type_additional_hint">Additional</string>
    <string name="change_record_type_default_duration">Default duration</string>
    <string name="change_record_type_default_duration_hint">Activities with default duration are tracked immediately on click.</string>
    <string name="change_record_type_goal_time_description">Notification will be shown after reaching the goal</string>
    <string name="change_record_type_duplicate_hint">Will create a copy of this activity</string>
    <string name="change_record_type_session_goal_time">Session</string>
    <string name="change_record_type_daily_goal_time">@string/range_day</string>
...
    <string name="types_filter_hide_all">Hide all</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="chart_filter_type_hint">Filter type</string>
    <string name="chart_filter_categories_empty">No tags added</string>

    <string name="duration_dialog_save">Save</string>
    <string name="duration_dialog_disable">Disable</string>

    <string name="color_selection_base_color_hint">Select base color</string>
    <string name="color_selection_adjust_color_hint">Adjust color</string>
    <string name="color_selection_final_color_hint">Final color</string>

...
    <string name="running_records_empty">Click on activity to start tracking</string>
    <string name="running_records_empty_inverted">Long click on activity to start tracking</string>
    <string name="running_records_has_timers">Click on card to stop tracking</string>
    <string name="running_records_has_timers_inverted">Long click on card to stop tracking</string>
    <string name="running_records_empty_hint">Long click to edit</string>
    <string name="running_records_empty_hint_inverted">Click to edit</string>
    <string name="running_records_add_type">Add</string>
    <string name="running_records_add_filter">Add filter</string>
    <string name="running_records_add_default">Default</string>
    <string name="running_records_repeat">Repeat</string>
    <string name="running_records_repeat_no_prev_record">No previous record to restart</string>
    <string name="running_records_repeat_already_tracking">Already tracking this activity</string>

...
