<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/ivRecordSelectedItemCheck"
        android:layout_width="24dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        app:cardBackgroundColor="?colorAccent"
        app:cardCornerRadius="@dimen/record_type_card_corner_radius"
        app:cardElevation="@dimen/record_type_card_elevation"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.util.simpletimetracker.feature_views.RecordView
        android:id="@+id/viewRecordItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-4dp"
        android:layout_marginEnd="4dp"
        app:cardElevation="@dimen/record_type_card_elevation"
        app:itemTagColor="@color/white_alpha_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivRecordSelectedItemCheck"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemColor="@color/blue_800"
        tools:itemDuration="5h 23m 3s"
        tools:itemName="Record"
        tools:itemTagName="Tag"
        tools:itemTimeEnded="11:58"
        tools:itemTimeStarted="07:35" />

</androidx.constraintlayout.widget.ConstraintLayout>