...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.example.util.simpletimetracker.feature_views.CategoryView
        android:id="@+id/viewRecordShortcutItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:cardElevation="@dimen/record_type_card_elevation"
        app:layout_constraintEnd_toEndOf="parent"
...
