...
                android:layout_marginHorizontal="@dimen/edit_screen_margin_horizontal"
                android:layout_marginTop="@dimen/edit_screen_field_top_margin"
                app:errorIconDrawable="@null"
                app:layout_constraintTop_toBottomOf="@id/spaceChangeRecordTypeFieldsTop">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etChangeRecordTypeName"
                    style="@style/ChangeItemNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/change_record_type_name_hint" />

            </com.google.android.material.textfield.TextInputLayout>
...
